--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,11 @@
-addons:
-  artifacts:
-    s3_region: "eu-west-1"
+deploy:
+  provider: s3
+  region: "eu-west-1"
+  acl: public_read
+  skip_cleanup: true
 language: node_js
 cache:
   directories:
   - node_modules
-notifications:
-  webhooks:
-    urls:
-      - http://github-webhooks.eb.dev.dadi.technology/travis-webhook
-    on_success: always
-    on_failure: always
-    on_start: always
-    on_cancel: always
-    on_error: always
-  email: false
-  slack: false
 node_js:
 - '8'
